syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Keymanagergrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeymanagergrpcService {
  rpc cria (CreateKeyRequest) returns (CreateKeyResponse) {}
  rpc deleta (DeleteKeyRequest) returns (DeleteKeyResponse) {}
}

enum KeyType {
  CPF = 0;
  PHONE = 1;
  EMAIL = 2;
  RANDOM = 3;
}

enum AccountType {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message CreateKeyRequest {
  string idCliente = 1;
  KeyType tipoChave = 2;
  string chave = 3;
  AccountType tipoConta = 4;
}

message CreateKeyResponse {
  int64 idPix = 1;
}

message DeleteKeyRequest {
  int64 idPix = 1;
  string idCliente = 2;
}

message DeleteKeyResponse{}